Fixing collapse bug.

--- a/src/sim-host/ui/sim-host.css
+++ b/src/sim-host/ui/sim-host.css
@@ -281,6 +281,7 @@ body /deep/ .cordova-close-icon {
     margin-top: 1px;
     margin-bottom: auto;
     right: 6px;
+    bottom: 4px;
     margin-left: auto;
 }
 
